# Corpus-C

./: CMakeLists.txt  README.md  conanfile.py
Test/: CorpusStreamTest.c  CorpusTest.c  EnglishSplitterTest.c  FileDescriptionTest.c  SentenceTest.c  TurkishSplitterTest.c
src/: CMakeLists.txt  Corpus.c  Corpus.h  CorpusStream.c  CorpusStream.h  EnglishSplitter.c  EnglishSplitter.h  FileDescription.c  FileDescription.h  Paragraph.c  Paragraph.h  Sentence.c  Sentence.h  SentenceSplitter.c  SentenceSplitter.h  TurkishChecker.c  TurkishChecker.h  TurkishSplitter.c  TurkishSplitter.h  WordFormat.h
